tests/references/ill-typed/unexpected-type-for-expression-4.stella
language core;

extend with #references;

fn main(b : Bool) -> Bool {
  return new(false)
}